--- a/BGPhotoCropper/Base.lproj/Main.storyboard
+++ b/BGPhotoCropper/Base.lproj/Main.storyboard
@@ -56,11 +56,11 @@
                         <viewControllerLayoutGuide type="top" id="qOw-QM-BgK"/>
                         <viewControllerLayoutGuide type="bottom" id="qpk-CP-fwo"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="uIp-sD-g67">
+                    <view key="view" opaque="NO" contentMode="scaleToFill" id="uIp-sD-g67">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" minimumZoomScale="0.69999999999999996" maximumZoomScale="4" translatesAutoresizingMaskIntoConstraints="NO" id="7jT-f6-Vcb">
+                            <scrollView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" minimumZoomScale="0.69999999999999996" maximumZoomScale="4" translatesAutoresizingMaskIntoConstraints="NO" id="7jT-f6-Vcb">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
@@ -100,8 +100,8 @@
                                     <outlet property="delegate" destination="bjA-EX-kAL" id="1Be-zr-H8X"/>
                                 </connections>
                             </scrollView>
-                            <view userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e8C-7p-qbu" userLabel="cropFrame">
-                                <rect key="frame" x="40" y="180" width="240" height="100"/>
+                            <view opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e8C-7p-qbu" userLabel="cropFrame" customClass="BGCropOverlayView">
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
